--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<title>Väggtimer – skalad scen</title>
+<title>Väggtimer – skalad scen (Chrome 59-safe)</title>
 <style>
   :root{
     --pad: 16px;
@@ -102,49 +102,69 @@
 
 <script>
 /* --- Selektorer --- */
-const $ = s=>document.querySelector(s);
-const title=$('#title'), timeEl=$('#time'), fill=$('#fill'), ticks=$('#ticks');
-const active=$('#activePeriod'), nextP=$('#nextPeriod'), settings=$('#settings');
-const stage=$('#stage');
+var $ = function(s){ return document.querySelector(s); };
+var title=$('#title'), timeEl=$('#time'), fill=$('#fill'), ticks=$('#ticks');
+var active=$('#activePeriod'), nextP=$('#nextPeriod'), settings=$('#settings');
+var stage=$('#stage');
 
 /* --- Perioddata --- */
-const DEFAULT_PERIODS = [
+var DEFAULT_PERIODS = [
   { name:"Morgon",     start:"07:00", end:"09:00" },
   { name:"Arbetstid",  start:"09:00", end:"17:00" },
   { name:"Kväll",      start:"17:00", end:"22:30" },
   { name:"Läggdags",   start:"22:30", end:"23:59" },
-  { name:"Natt",       start:"00:00", end:"07:00" },
+  { name:"Natt",       start:"00:00", end:"07:00" }
 ];
-function getPeriods(){ try{ const r=localStorage.getItem('walltimer.periods'); const arr=r?JSON.parse(r):DEFAULT_PERIODS; return (Array.isArray(arr)&&arr.length)?arr:DEFAULT_PERIODS; }catch{ return DEFAULT_PERIODS; } }
+function getPeriods(){
+  try{
+    var r=localStorage.getItem('walltimer.periods');
+    var arr=r?JSON.parse(r):DEFAULT_PERIODS;
+    return (Object.prototype.toString.call(arr)==='[object Array]' && arr.length)?arr:DEFAULT_PERIODS;
+  }catch(e){ return DEFAULT_PERIODS; }
+}
 function setPeriods(p){ localStorage.setItem('walltimer.periods', JSON.stringify(p)); }
 
 /* --- Hjälp --- */
-function t2m(t){ const [h,m]=t.split(':').map(Number); return (h%24)*60+(m||0); }
-function nowMin(){ const n=new Date(); return n.getHours()*60+n.getMinutes()+n.getSeconds()/60; }
-function fmt(ms){ let s=Math.max(0, Math.floor(ms/1000)); const h=Math.floor(s/3600); s-=h*3600; const m=Math.floor(s/60); s-=m*60; return `${h}h ${m}m ${String(s).padStart(2,'0')}s`; }
+function t2m(t){ var parts=t.split(':'), h=+parts[0], m=+parts[1]||0; return (h%24)*60+m; }
+function nowMin(){ var n=new Date(); return n.getHours()*60+n.getMinutes()+n.getSeconds()/60; }
+function fmt(ms){
+  var s=Math.max(0, Math.floor(ms/1000));
+  var h=Math.floor(s/3600); s-=h*3600;
+  var m=Math.floor(s/60); s-=m*60;
+  return h+'h '+m+'m '+String(s).padStart(2,'0')+'s';
+}
 
-/* --- Splitta över midnatt och välj period --- */
+/* --- Splitta över midnatt och välj period (utan object spread) --- */
 function expand(ps){
-  const out=[];
-  for(const p of ps){
-    const a=t2m(p.start), b=t2m(p.end);
-    if(b>=a){ out.push({...p,a,b}); }
-    else { out.push({...p,a,b:1440}); out.push({...p,name:p.name,a:0,b}); }
+  var out=[];
+  for(var i=0;i<ps.length;i++){
+    var p=ps[i];
+    var a=t2m(p.start), b=t2m(p.end);
+    if(b>=a){
+      out.push(Object.assign({}, p, {a:a, b:b}));
+    }else{
+      out.push(Object.assign({}, p, {a:a, b:1440}));
+      out.push(Object.assign({}, p, {a:0,  b:b}));
+    }
   }
-  return out.sort((x,y)=>x.a-y.a);
+  out.sort(function(x,y){ return x.a - y.a; });
+  return out;
 }
 function pick(ps){
-  const n=nowMin(), list=expand(ps);
-  let cur=null, nxt=null;
-  for(let i=0;i<list.length;i++){
-    const p=list[i];
+  var n=nowMin(), list=expand(ps);
+  var cur=null, nxt=null;
+  for(var i=0;i<list.length;i++){
+    var p=list[i];
     if(n>=p.a && n<p.b){ cur=p; nxt=list[(i+1)%list.length]; break; }
   }
   if(!cur){
-    nxt = list.find(p=>p.a>n) || list[0];
+    nxt = (function(){
+      for(var j=0;j<list.length;j++){ if(list[j].a>n) return list[j]; }
+      return list[0];
+    })();
     cur = { name:"Paus", a:n, b:nxt.a };
   }
-  return {cur, nxt};
+  return {cur:cur, nxt:nxt};
 }
 
 /* --- Ticks --- */
@@ -154,128 +174,143 @@ function chooseTickStep(totalMin){
   return 120;
 }
 function fmtTick(mins){
-  if (mins % 60 === 0) return `${mins/60}h`;
-  return `${mins%60}m`;
+  if (mins % 60 === 0) return (mins/60)+'h';
+  return (mins%60)+'m';
 }
 function drawTicks(totalMin){
   ticks.innerHTML='';
-  const step = chooseTickStep(totalMin);
-  for(let at=0; at<=totalMin; at+=step){
-    const left = (at/totalMin)*100;
-    const div = document.createElement('div');
+  var step = chooseTickStep(totalMin);
+  for(var at=0; at<=totalMin; at+=step){
+    var left = (at/totalMin)*100;
+    var div = document.createElement('div');
     div.className='tick';
     div.style.left = left+'%';
-    div.innerHTML = `<i></i><span>${fmtTick(at)}</span>`;
+    div.innerHTML = '<i></i><span>'+fmtTick(at)+'</span>';
     ticks.appendChild(div);
   }
-  const end = document.createElement('div');
+  var end = document.createElement('div');
   end.className = 'tick end';
   end.style.left = '100%';
-  end.innerHTML = `<i></i><span>slut</span>`;
+  end.innerHTML = '<i></i><span>slut</span>';
   ticks.appendChild(end);
 }
 
 /* --- Ljudpip vid slut --- */
-let audioCtx;
-function beep(ms=200, freq=880){
+var audioCtx;
+function beep(ms, freq){
+  ms = ms || 200; freq = freq || 880;
   try{
     audioCtx = audioCtx || new (window.AudioContext||window.webkitAudioContext)();
-    const o=audioCtx.createOscillator(), g=audioCtx.createGain();
+    var o=audioCtx.createOscillator(), g=audioCtx.createGain();
     o.connect(g); g.connect(audioCtx.destination);
     o.type='sine'; o.frequency.value=freq; g.gain.value=.05; o.start();
-    setTimeout(()=>o.stop(), ms);
+    setTimeout(function(){ o.stop(); }, ms);
   }catch(e){}
 }
 
 /* === SCEN-SKALNING (fix för WebView 59) === */
-const BASE_W = 1280, BASE_H = 800;
+var BASE_W = 1280, BASE_H = 800;
 function applyScale(){
-  const ww=Math.max(100, window.innerWidth  || document.documentElement.clientWidth  || 0);
-  const wh=Math.max(100, window.innerHeight || document.documentElement.clientHeight || 0);
-  let s=Math.min(ww/BASE_W, wh/BASE_H);
+  var ww=Math.max(100, window.innerWidth  || document.documentElement.clientWidth  || 0);
+  var wh=Math.max(100, window.innerHeight || document.documentElement.clientHeight || 0);
+  var s=Math.min(ww/BASE_W, wh/BASE_H);
   s=Math.max(0.1,Math.min(4,s));
-  const x=(ww-BASE_W*s)/2;
-  const y=(wh-BASE_H*s)/2;
-  stage.style.transform=`translate(${x}px,${y}px) scale(${s})`;
+  var x=(ww-BASE_W*s)/2;
+  var y=(wh-BASE_H*s)/2;
+  stage.style.transform='translate('+x+'px,'+y+'px) scale('+s+')';
   // log för felsökning i Fully
-  console.log('applyScale()', {ww,wh,s,x,y});
+  console.log('applyScale()', {ww:ww,wh:wh,s:s,x:x,y:y});
 }
 window.addEventListener('resize', applyScale);
 window.addEventListener('orientationchange', applyScale);
 
 /* --- Huvudloop --- */
 function loop(){
-  const ps=getPeriods();
-  const {cur, nxt} = pick(ps);
-  const n = new Date();
-  const nMin = n.getHours()*60 + n.getMinutes() + n.getSeconds()/60;
-  const total = (cur.b - cur.a) * 60 * 1000;
-  const passed = (nMin - cur.a) * 60 * 1000;
-  const remain = Math.max(0, total - passed);
+  var ps=getPeriods();
+  var picked = pick(ps);
+  var cur=picked.cur, nxt=picked.nxt;
+  var n = new Date();
+  var nMin = n.getHours()*60 + n.getMinutes() + n.getSeconds()/60;
+  var total = (cur.b - cur.a) * 60 * 1000;
+  var passed = (nMin - cur.a) * 60 * 1000;
+  var remain = Math.max(0, total - passed);
 
-  const endMin = cur.b % 1440;
-  const endH = String(Math.floor(endMin/60)).padStart(2,'0');
-  const endM = String(endMin%60).padStart(2,'0');
+  var endMin = cur.b % 1440;
+  var endH = String(Math.floor(endMin/60)).padStart(2,'0');
+  var endM = String(endMin%60).padStart(2,'0');
 
-  title.textContent = `Tid kvar till ${nxt.name} (kl ${endH}:${endM})`;
+  title.textContent = 'Tid kvar till ' + nxt.name + ' (kl ' + endH + ':' + endM + ')';
   timeEl.textContent = fmt(remain);
 
-  const pct = total>0 ? Math.min(100, Math.max(0, (passed/total)*100)) : 100;
+  var pct = total>0 ? Math.min(100, Math.max(0, (passed/total)*100)) : 100;
   fill.style.width = pct + '%';
 
   drawTicks((cur.b - cur.a));
 
-  active.textContent = `Nu: ${cur.name}`;
-  nextP.textContent   = `Nästa: ${nxt.name} → ${String(Math.floor(nxt.a/60)).padStart(2,'0')}:${String(nxt.a%60).padStart(2,'0')}`;
+  active.textContent = 'Nu: ' + cur.name;
+  nextP.textContent   = 'Nästa: ' + nxt.name + ' → ' +
+    String(Math.floor(nxt.a/60)).padStart(2,'0') + ':' + String(nxt.a%60).padStart(2,'0');
 
   if (remain <= 10 * 60 * 1000) { document.body.classList.add('danger'); }
   else { document.body.classList.remove('danger'); }
 
   if(remain<=1000 && remain>0){
-    for(let i=0;i<5;i++) setTimeout(()=>beep(120, 1000+i*60), i*180);
+    for(var i=0;i<5;i++){
+      (function(k){ setTimeout(function(){ beep(120, 1000+k*60); }, k*180); })(i);
+    }
   }
 
   requestAnimationFrame(loop);
 }
 
 /* --- Inställnings-UI --- */
-function openSettings(v=true){ settings.style.display = v? 'block':'none'; }
+function openSettings(v){ settings.style.display = (v===false)? 'none':'block'; }
 function rowTpl(p,i){
-  return `<div class="row" data-i="${i}">
-    <input type="text" value="${p.name}" aria-label="Namn" placeholder="Namn (t.ex. Läggdags)" />
-    <input type="time" value="${p.start}" aria-label="Start" />
-    <input type="time" value="${p.end}" aria-label="Slut" />
-    <button data-del="${i}">Ta bort</button>
-  </div>`;
+  return '<div class="row" data-i="'+i+'">'+
+    '<input type="text" value="'+p.name+'" aria-label="Namn" placeholder="Namn (t.ex. Läggdags)" />'+
+    '<input type="time" value="'+p.start+'" aria-label="Start" />'+
+    '<input type="time" value="'+p.end+'" aria-label="Slut" />'+
+    '<button data-del="'+i+'">Ta bort</button>'+
+  '</div>';
 }
-function renderRows(){ const rows=$('#rows'); const ps=getPeriods(); rows.innerHTML = ps.map((p,i)=>rowTpl(p,i)).join(''); }
+function renderRows(){
+  var rows=$('#rows'); var ps=getPeriods();
+  var html=''; for(var i=0;i<ps.length;i++){ html+=rowTpl(ps[i],i); }
+  rows.innerHTML = html;
+}
 function saveRows(){
-  const rows=[...document.querySelectorAll('.row')];
-  const arr = rows.map(r=>{
-    const [name,start,end]=[...r.querySelectorAll('input')].map(x=>x.value);
-    return { name: name||'Period', start, end };
+  var rowEls=[].slice.call(document.querySelectorAll('.row'));
+  var arr = rowEls.map(function(r){
+    var ins=[].slice.call(r.querySelectorAll('input'));
+    var name=ins[0].value, start=ins[1].value, end=ins[2].value;
+    return { name: name||'Period', start: start, end: end };
   });
   setPeriods(arr); renderRows(); openSettings(false);
 }
 
-$('#openSettings').addEventListener('click', ()=>{ renderRows(); openSettings(true); });
-let touchTimer=null;
-document.addEventListener('touchstart', ()=>{ touchTimer=setTimeout(()=>{ renderRows(); openSettings(true); }, 650); }, {passive:true});
-document.addEventListener('touchend', ()=>{ if(touchTimer){ clearTimeout(touchTimer); touchTimer=null; }}, {passive:true});
+$('#openSettings').addEventListener('click', function(){ renderRows(); openSettings(true); });
+var touchTimer=null;
+document.addEventListener('touchstart', function(){
+  touchTimer=setTimeout(function(){ renderRows(); openSettings(true); }, 650);
+}, {passive:true});
+document.addEventListener('touchend', function(){
+  if(touchTimer){ clearTimeout(touchTimer); touchTimer=null; }
+}, {passive:true});
 
-$('#close').addEventListener('click', ()=> openSettings(false));
+$('#close').addEventListener('click', function(){ openSettings(false); });
 $('#save').addEventListener('click', saveRows);
-$('#add').addEventListener('click', ()=>{
-  const ps=getPeriods(); ps.push({name:"Ny period", start:"12:00", end:"13:00"}); setPeriods(ps); renderRows();
+$('#add').addEventListener('click', function(){
+  var ps=getPeriods(); ps.push({name:"Ny period", start:"12:00", end:"13:00"}); setPeriods(ps); renderRows();
 });
-settings.addEventListener('click', (e)=>{
-  const btn=e.target.closest('button[data-del]'); if(!btn) return;
-  const i=+btn.dataset.del; const ps=getPeriods(); ps.splice(i,1); setPeriods(ps); renderRows();
+settings.addEventListener('click', function(e){
+  var btn=e.target && e.target.getAttribute && e.target.getAttribute('data-del');
+  if(btn==null) return;
+  var i=+btn; var ps=getPeriods(); ps.splice(i,1); setPeriods(ps); renderRows();
 });
 
 /* Dubbeltryck för helskärm (om stöds) */
-document.addEventListener('dblclick', ()=>{
-  const el=document.documentElement; if(el.requestFullscreen) el.requestFullscreen();
+document.addEventListener('dblclick', function(){
+  var el=document.documentElement; if(el.requestFullscreen) el.requestFullscreen();
 });
 
 /* --- Start --- */
