--- a/index.html
+++ b/index.html
@@ -3,86 +3,114 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<title>Väggtimer – skalad scen (Chrome 59-safe)</title>
+<title>Väggtimer – skalad scen (fixad UI)</title>
 <style>
   :root{
     --pad: 16px;
     --radius: 20px;
     --touch: 48px;
-    --fs-time: 220px; /* i design-ytan; hela scenen skalas via transform */
+    --fs-time: 220px;   /* stora siffror i design-ytan (skalning sköts via JS) */
+    --fs-title: 3rem;   /* större rubrik */
+    --fs-subtitle: 1.4rem;
+    --track-lr: 120px;  /* sidomarginaler för bar + ticks (design-space px) */
+    --bar-h: 56px;      /* tjockare bar */
   }
-  html,body{height:100%;margin:0;background:#000;color:#fff;overflow:hidden;
-            -webkit-text-size-adjust:100%;text-size-adjust:100%}
+
+  html,body{
+    height:100%; margin:0;
+    background:#000;     /* svart bakgrund */
+    color:#fff; overflow:hidden;
+    -webkit-text-size-adjust:100%; text-size-adjust:100%;
+  }
+  body.danger{ background:#8b0000; } /* röd vid ≤ 10 min kvar */
 
   /* === SCEN (fast design-yta 1280×800 som vi skalar/centrerar med JS) === */
   #stage{
     position:absolute; left:0; top:0;
-    width:1280px; height:800px;        /* DESIGNMÅTT */
+    width:1280px; height:800px;       /* DESIGNMÅTT */
     box-sizing:border-box;
     padding:20px;
     display:grid;
-    grid-template-rows:auto 1fr auto auto;
+    grid-template-rows:auto auto 1fr auto; /* titel, undertext, klocka, track */
     gap:12px;
     transform-origin:0 0; will-change:transform; backface-visibility:hidden;
-
-    /* debugvänlig bakgrund – syns alltid om scenen visas */
-    background:#1a1a1a;
+    /* INTE grå längre – låt kroppens svarta (eller röda) synas */
+    background:transparent;
   }
 
-  .title{ text-align:center; font-weight:800; font-size:1.5rem; letter-spacing:.3px; opacity:.95; }
-  .time { display:grid; place-items:center; text-align:center; font-weight:900;
-          line-height:1; letter-spacing:.4px; font-size: var(--fs-time); white-space:nowrap; margin-bottom:8px; }
-  .footer{ display:flex; justify-content:space-between; align-items:center; gap:12px; font-weight:600; opacity:.95; font-size:1rem; }
+  .title{
+    text-align:center; font-weight:800; letter-spacing:.3px; opacity:.98;
+    font-size: var(--fs-title);
+  }
+  .subtitle{
+    text-align:center; font-weight:700; opacity:.95;
+    font-size: var(--fs-subtitle);
+  }
+  .time{
+    display:grid; place-items:center;
+    text-align:center; font-weight:900; line-height:1;
+    letter-spacing:.4px; font-size: var(--fs-time);
+    white-space:nowrap; margin-bottom:8px;
+  }
 
-  .bar{ position:relative; height:24px; background:#e6e6e6; border-radius:999px; overflow:hidden; }
-  .fill{ position:absolute; inset:0 auto 0 0; width:0%; background:linear-gradient(90deg,#fff,#dcdcdc); border-radius:inherit; }
+  /* === Progress + ticks i en gemensam "track" med sidomarginaler === */
+  .track{
+    position:relative;
+    padding-left: var(--track-lr);
+    padding-right: var(--track-lr);
+  }
+  .bar{
+    position:relative;
+    height: var(--bar-h);
+    background:#2a2a2a;         /* mörk “ofylld” del för kontrast */
+    border-radius:999px; overflow:hidden;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,.06);
+  }
+  .fill{
+    position:absolute; inset:0 auto 0 0; width:0%;
+    background:linear-gradient(90deg,#ffffff,#e9e9e9); /* ljus “fylld” del */
+    border-radius:inherit;
+  }
 
-  .ticks{ position:relative; height:34px;}
+  .ticks{ position:relative; height: 52px; }
   .tick{ position:absolute; top:0; transform:translateX(-50%); text-align:center; }
-  .tick i{ display:block; width:2px; height:16px; background:rgba(255,255,255,.95); margin:0 auto 6px; border-radius:2px; }
-  .tick span{ font-size:.875rem; opacity:.95; }
-  .tick.end i{ width:3px; height:22px; background:#fff; }
-  .tick.end span{ font-weight:800; }
+  .tick i{ display:block; width:3px; height:24px; background:rgba(255,255,255,.95);
+           margin:0 auto 6px; border-radius:2px; }
+  .tick span{ font-size:1.15rem; opacity:.98; font-weight:700; }
+  .tick.end i{ width:4px; height:28px; background:#fff; }
+  .tick.end span{ font-weight:900; }
 
-  .pills{ display:flex; gap:10px; align-items:center; flex-wrap:wrap;}
-  .pill{ padding:.35em .8em; background:#121212; border:1px solid #2a2a2a; border-radius:999px; }
-
+  /* Settings-knappen: flytta till övre högra hörnet (så den inte krockar) */
   .fab{
-    position:absolute;
-    right:16px; bottom:16px;
-    width:64px; height:64px;
+    position:absolute; right:16px; top:16px; /* <— FLYTTAD HIT */
+    width:64px; height:64px; z-index:10;
     border-radius:999px; display:grid; place-items:center;
     background:#151515; color:#fff; border:1px solid #2a2a2a;
-    font-size:18px;
-    user-select:none; cursor:pointer; touch-action:manipulation;
+    font-size:20px; user-select:none; cursor:pointer; touch-action:manipulation;
+    box-shadow: 0 8px 24px rgba(0,0,0,.4);
   }
 
   .settings{
     position:absolute; inset:0; background:rgba(0,0,0,.94);
-    border:none; padding:20px; display:none; overflow:auto;
+    border:none; padding:20px; display:none; overflow:auto; z-index:20;
   }
   .settings h2{margin:.2em 0 .6em; font-size:1.375rem;}
   .row{display:grid; grid-template-columns:1.2fr 1fr 1fr auto; gap:10px; align-items:center; margin:.5em 0;}
   .row input{ padding:.8em .9em; border-radius:12px; border:1px solid #2a2a2a; background:#0d0d0d; color:#fff; font-size:1rem;}
   .settings .actions{display:flex; gap:12px; margin-top:10px; flex-wrap:wrap;}
   .settings button{ padding:.9em 1.1em; min-height:48px; border-radius:12px; border:1px solid #2a2a2a; background:#101010; color:#fff; font-weight:700; cursor:pointer; font-size:1rem;}
-
-  body.danger{ background:#8b0000; }
 </style>
 </head>
 <body>
   <div id="stage">
     <div class="title" id="title">Tid kvar</div>
+    <div class="subtitle" id="subtitle">–</div>
+
     <div class="time" id="time">--</div>
 
-    <div class="bar" id="bar"><div class="fill" id="fill"></div></div>
-    <div class="ticks" id="ticks"></div>
-
-    <div class="footer">
-      <div class="pills">
-        <div class="pill" id="activePeriod">–</div>
-        <div class="pill" id="nextPeriod">–</div>
-      </div>
+    <div class="track">
+      <div class="bar" id="bar"><div class="fill" id="fill"></div></div>
+      <div class="ticks" id="ticks"></div>
     </div>
 
     <div class="fab" id="openSettings" aria-label="Inställningar">⚙︎</div>
@@ -103,9 +131,8 @@
 <script>
 /* --- Selektorer --- */
 var $ = function(s){ return document.querySelector(s); };
-var title=$('#title'), timeEl=$('#time'), fill=$('#fill'), ticks=$('#ticks');
-var active=$('#activePeriod'), nextP=$('#nextPeriod'), settings=$('#settings');
-var stage=$('#stage');
+var title=$('#title'), subtitle=$('#subtitle'), timeEl=$('#time'), fill=$('#fill'), ticks=$('#ticks');
+var settings=$('#settings'), stage=$('#stage');
 
 /* --- Perioddata --- */
 var DEFAULT_PERIODS = [
@@ -134,12 +161,11 @@ function fmt(ms){
   return h+'h '+m+'m '+String(s).padStart(2,'0')+'s';
 }
 
-/* --- Splitta över midnatt och välj period (utan object spread) --- */
+/* --- Splitta över midnatt & välj period (Chrome 59-vänligt) --- */
 function expand(ps){
   var out=[];
   for(var i=0;i<ps.length;i++){
-    var p=ps[i];
-    var a=t2m(p.start), b=t2m(p.end);
+    var p=ps[i], a=t2m(p.start), b=t2m(p.end);
     if(b>=a){
       out.push(Object.assign({}, p, {a:a, b:b}));
     }else{
@@ -218,7 +244,6 @@ function applyScale(){
   var x=(ww-BASE_W*s)/2;
   var y=(wh-BASE_H*s)/2;
   stage.style.transform='translate('+x+'px,'+y+'px) scale('+s+')';
-  // log för felsökning i Fully
   console.log('applyScale()', {ww:ww,wh:wh,s:s,x:x,y:y});
 }
 window.addEventListener('resize', applyScale);
@@ -239,7 +264,11 @@ function loop(){
   var endH = String(Math.floor(endMin/60)).padStart(2,'0');
   var endM = String(endMin%60).padStart(2,'0');
 
+  /* 1 & 9: större titel + visa "Nästa ..." under titeln */
   title.textContent = 'Tid kvar till ' + nxt.name + ' (kl ' + endH + ':' + endM + ')';
+  subtitle.textContent = 'Nästa: ' + nxt.name + ' \u2192 ' +
+    String(Math.floor(nxt.a/60)).padStart(2,'0') + ':' + String(nxt.a%60).padStart(2,'0');
+
   timeEl.textContent = fmt(remain);
 
   var pct = total>0 ? Math.min(100, Math.max(0, (passed/total)*100)) : 100;
@@ -247,10 +276,7 @@ function loop(){
 
   drawTicks((cur.b - cur.a));
 
-  active.textContent = 'Nu: ' + cur.name;
-  nextP.textContent   = 'Nästa: ' + nxt.name + ' → ' +
-    String(Math.floor(nxt.a/60)).padStart(2,'0') + ':' + String(nxt.a%60).padStart(2,'0');
-
+  /* 10: röd bakgrund vid ≤ 10 min */
   if (remain <= 10 * 60 * 1000) { document.body.classList.add('danger'); }
   else { document.body.classList.remove('danger'); }
 
