--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<title>Väggtimer – skalad scen (fixad UI)</title>
+<title>Väggtimer – skalad scen (fixad bar för WebView 59)</title>
 <style>
   :root{
     --pad: 16px;
     --radius: 20px;
     --touch: 48px;
-    --fs-time: 220px;   /* stora siffror i design-ytan (skalning sköts via JS) */
+    --fs-time: 220px;   /* stora siffror i design-ytan (skalning via JS) */
     --fs-title: 3rem;   /* större rubrik */
     --fs-subtitle: 1.4rem;
     --track-lr: 120px;  /* sidomarginaler för bar + ticks (design-space px) */
@@ -34,7 +34,6 @@
     grid-template-rows:auto auto 1fr auto; /* titel, undertext, klocka, track */
     gap:12px;
     transform-origin:0 0; will-change:transform; backface-visibility:hidden;
-    /* INTE grå längre – låt kroppens svarta (eller röda) synas */
     background:transparent;
   }
 
@@ -67,9 +66,14 @@
     box-shadow: inset 0 0 0 1px rgba(255,255,255,.06);
   }
   .fill{
-    position:absolute; inset:0 auto 0 0; width:0%;
-    background:linear-gradient(90deg,#ffffff,#e9e9e9); /* ljus “fylld” del */
+    position:absolute;
+    left:0; top:0; bottom:0;     /* istället för inset: (Chrome 59-kompatibelt) */
+    height:100%;
+    width:0%;
+    background:#ffffff;          /* fallback */
+    background-image:linear-gradient(90deg,#ffffff,#e9e9e9);
     border-radius:inherit;
+    transform: translateZ(0);    /* reducera gamla compositing-buggar */
   }
 
   .ticks{ position:relative; height: 52px; }
@@ -80,9 +84,9 @@
   .tick.end i{ width:4px; height:28px; background:#fff; }
   .tick.end span{ font-weight:900; }
 
-  /* Settings-knappen: flytta till övre högra hörnet (så den inte krockar) */
+  /* Settings-knappen: övre högra hörnet */
   .fab{
-    position:absolute; right:16px; top:16px; /* <— FLYTTAD HIT */
+    position:absolute; right:16px; top:16px;
     width:64px; height:64px; z-index:10;
     border-radius:999px; display:grid; place-items:center;
     background:#151515; color:#fff; border:1px solid #2a2a2a;
@@ -154,11 +158,12 @@ function setPeriods(p){ localStorage.setItem('walltimer.periods', JSON.stringify
 /* --- Hjälp --- */
 function t2m(t){ var parts=t.split(':'), h=+parts[0], m=+parts[1]||0; return (h%24)*60+m; }
 function nowMin(){ var n=new Date(); return n.getHours()*60+n.getMinutes()+n.getSeconds()/60; }
+function pad2(x){ return (x<10?'0':'')+x; }
 function fmt(ms){
   var s=Math.max(0, Math.floor(ms/1000));
   var h=Math.floor(s/3600); s-=h*3600;
   var m=Math.floor(s/60); s-=m*60;
-  return h+'h '+m+'m '+String(s).padStart(2,'0')+'s';
+  return h+'h '+m+'m '+pad2(s)+'s';
 }
 
 /* --- Splitta över midnatt & välj period (Chrome 59-vänligt) --- */
@@ -261,13 +266,13 @@ function loop(){
   var remain = Math.max(0, total - passed);
 
   var endMin = cur.b % 1440;
-  var endH = String(Math.floor(endMin/60)).padStart(2,'0');
-  var endM = String(endMin%60).padStart(2,'0');
+  var endH = pad2(Math.floor(endMin/60));
+  var endM = pad2(endMin%60);
 
-  /* 1 & 9: större titel + visa "Nästa ..." under titeln */
+  /* titel + undertext */
   title.textContent = 'Tid kvar till ' + nxt.name + ' (kl ' + endH + ':' + endM + ')';
   subtitle.textContent = 'Nästa: ' + nxt.name + ' \u2192 ' +
-    String(Math.floor(nxt.a/60)).padStart(2,'0') + ':' + String(nxt.a%60).padStart(2,'0');
+    pad2(Math.floor(nxt.a/60)) + ':' + pad2(nxt.a%60);
 
   timeEl.textContent = fmt(remain);
 
@@ -276,7 +281,7 @@ function loop(){
 
   drawTicks((cur.b - cur.a));
 
-  /* 10: röd bakgrund vid ≤ 10 min */
+  /* röd bakgrund vid ≤ 10 min */
   if (remain <= 10 * 60 * 1000) { document.body.classList.add('danger'); }
   else { document.body.classList.remove('danger'); }
 
@@ -329,9 +334,9 @@ $('#add').addEventListener('click', function(){
   var ps=getPeriods(); ps.push({name:"Ny period", start:"12:00", end:"13:00"}); setPeriods(ps); renderRows();
 });
 settings.addEventListener('click', function(e){
-  var btn=e.target && e.target.getAttribute && e.target.getAttribute('data-del');
-  if(btn==null) return;
-  var i=+btn; var ps=getPeriods(); ps.splice(i,1); setPeriods(ps); renderRows();
+  var el=e.target; if(!el || !el.getAttribute) return;
+  var idx=el.getAttribute('data-del'); if(idx==null) return;
+  var ps=getPeriods(); ps.splice(+idx,1); setPeriods(ps); renderRows();
 });
 
 /* Dubbeltryck för helskärm (om stöds) */
